--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">Amphibians</string>
+    <string name="placeholder_name">Great Basin Spadefoot</string>
+    <string name="placeholder_type">Toad</string>
+    <string name="placeholder_description">This toad spends most of its life underground due to the arid desert conditions in which it lives. Spadefoot toads earn the name because of their hind legs which are wedged to aid in digging. They are typically grey, green, or brown with dark spots.</string>
 </resources>
